--- a/crewards-v2/package.json
+++ b/crewards-v2/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^2.9.0"
