--- a/crewards-v2/tsconfig.app.json
+++ b/crewards-v2/tsconfig.app.json
@@ -18,7 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Adicione isso */
+    "types": ["@netlify/functions"] // Inclua as definições de tipo do Netlify
   },
-  "include": ["src"]
+  "include": ["src", "functions/**/*.ts"] // Inclua suas funções também
 }
