--- a/crewards-v2/package.json
+++ b/crewards-v2/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@netlify/functions": "^2.8.1",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "framer-motion": "^11.5.6",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
