--- a/crewards-v2/tsconfig.node.json
+++ b/crewards-v2/tsconfig.node.json
@@ -21,5 +21,5 @@
     /* Adicione isso */
     "types": ["@netlify/functions"] // Inclua as definições de tipo do Netlify
   },
-  "include": ["vite.config.ts", "functions/**/*.ts", ".netlify/functions/getPlayers.ts"] // Inclua também suas funções
+  "include": ["vite.config.ts", "functions/**/*.ts"] // Inclua também suas funções
 }
